Define toubleshooting layout issues in domain block section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -306,6 +306,7 @@ a {
 .input-group .input {
   border: 0;
   flex-grow: 1;
+  width: 0;
   padding: 1.5rem 2rem;
 }
 
@@ -745,10 +746,11 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
   font-size: 2rem;
   font-weight: 600;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   justify-items: center;
   margin: 0 auto;
